--- a/WMRApp/WMRApp.csproj
+++ b/WMRApp/WMRApp.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Global.cs" />
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Platform.xaml.cs">
+      <DependentUpon>Platform.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
@@ -84,6 +87,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Platform.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Registration.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
