--- a/WMRApp/WMRApp.csproj
+++ b/WMRApp/WMRApp.csproj
@@ -73,6 +73,7 @@
     </ApplicationDefinition>
     <Compile Include="Global.cs" />
     <Compile Include="Models\Database.cs" />
+    <Compile Include="Models\Stop.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
