--- a/WMRApp/packages.config
+++ b/WMRApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.6" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
