move TraceRoot() method from Global to MainWindow

--- a/WMRApp/WMRApp.csproj
+++ b/WMRApp/WMRApp.csproj
@@ -74,6 +74,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\DraggablePin.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Models\Database.cs" />
     <Compile Include="Models\RootObject.cs" />
